remove libsodium dependency in favor of the native go/crypto ed25519 library

--- a/lib/common/fuzz/Dockerfile
+++ b/lib/common/fuzz/Dockerfile
@@ -1,8 +1,7 @@
 FROM golang
 
 RUN apt-get update && \
-    apt-get upgrade -y && \
-    apt-get install libsodium-dev -y
+    apt-get upgrade -y
 
 RUN go get github.com/dvyukov/go-fuzz/go-fuzz
 RUN go get github.com/dvyukov/go-fuzz/go-fuzz-build
