--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,7 +22,6 @@ jobs:
           - "test-crypto-elg-all"
           - "test-crypto-hmac-all"
           - "test-i2np-header-all"
-          - "test-i2np-build-request-all"
           - "test-key-cert-all"
           - "test-keys-cert-all"
           - "test-lease-set-all"
@@ -31,6 +30,10 @@ jobs:
           - "test-router-info-all"
           - "test-su3-all"
           - "test-tunnel-all"
+          - "test-base32-encode-decode-not-mangled"
+          - "test-base64-encode-decode-not-mangled"
+          - "test-lease-all"
+          - "test-date-time-from-milliseconds"
 
     steps:
       - name: Checkout repository
@@ -70,10 +73,3 @@ jobs:
         with:
           name: ${{ matrix.test_target }}-logs
           path: ./test-logs/${{ matrix.test_target }}.log  # Adjust this path as needed
-
-  aggregate_results:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Aggregate Test Results
-        run: echo "All tests have been executed. Review individual job logs for details."
