--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -67,7 +67,13 @@ jobs:
           DEBUG_I2P: debug
           CGO_ENABLED: 0
 
-      - name: Upload Test Logs (Optional)
+      - name: Build
+        run: make build
+        env:
+          GO: go
+          CGO_ENABLED: 0
+
+      - name: Upload Test Logs
         if: always()
         uses: actions/upload-artifact@v3
         with:
