--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -46,6 +46,7 @@ jobs:
           - "test-base64-encode-decode-not-mangled"
           - "test-lease-all"
           - "test-date-time-from-milliseconds"
+          - "test-cert-all"
 
     steps:
       - name: Checkout repository
