--- a/.github/workflows/auto-assign.yml
+++ b/.github/workflows/auto-assign.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     types: [opened]
 
+permissions:
+  issues: write
+  pull_requests: write
+  contents: read
+
 jobs:
   auto-assign:
     runs-on: ubuntu-latest
@@ -16,7 +21,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const assignees = ['eyedeekay'];
+            const assignees = ['eyedeekay']; // Replace with the GitHub username to assign
             const issue_number = context.issue.number;
             await github.rest.issues.addAssignees({
               ...context.repo,
@@ -29,7 +34,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const assignees = ['eyedeekay'];
+            const assignees = ['eyedeekay']; // Replace with the GitHub username to assign
             const pr_number = context.issue.number;
             await github.rest.issues.addAssignees({
               ...context.repo,
