--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,6 +47,7 @@ jobs:
           - "test-lease-all"
           - "test-date-time-from-milliseconds"
           - "test-cert-all"
+          - "test-crypto-curve25519-all"
 
     steps:
       - name: Checkout repository
